gramma/ParLatte.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from ParLatte.y
-----------------------------------------------------------------------------

state 150 contains 1 shift/reduce conflicts.

rule 46 is unused
rule 47 is unused
rule 48 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListDef                                 (4)
	Def -> Type Ident '(' ListArg ')' Block            (5)
	Def -> 'class' Ident Extend '{' ListFeature '}'    (6)
	ListDef -> Def                                     (7)
	ListDef -> Def ListDef                             (8)
	Arg -> Type Ident                                  (9)
	ListArg ->                                         (10)
	ListArg -> Arg                                     (11)
	ListArg -> Arg ',' ListArg                         (12)
	Extend ->                                          (13)
	Extend -> 'extends' Ident                          (14)
	Feature -> Type ListItem ';'                       (15)
	Feature -> Type Ident '(' ListArg ')' Block        (16)
	Feature -> ';'                                     (17)
	ListFeature ->                                     (18)
	ListFeature -> Feature ListFeature                 (19)
	Item -> Ident                                      (20)
	Item -> Ident '=' Expr                             (21)
	ListItem -> Item                                   (22)
	ListItem -> Item ',' ListItem                      (23)
	Block -> '{' ListStmt '}'                          (24)
	Stmt -> ';'                                        (25)
	Stmt -> Block                                      (26)
	Stmt -> Expr ';'                                   (27)
	Stmt -> Type ListItem ';'                          (28)
	Stmt -> Expr '=' Expr ';'                          (29)
	Stmt -> Expr '++' ';'                              (30)
	Stmt -> Expr '--' ';'                              (31)
	Stmt -> 'return' Expr ';'                          (32)
	Stmt -> 'return' ';'                               (33)
	Stmt -> 'while' '(' Expr ')' Stmt                  (34)
	Stmt -> 'for' '(' Type Ident ':' Expr ')' Stmt     (35)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (36)
	Stmt -> 'if' '(' Expr ')' Stmt                     (37)
	ListStmt ->                                        (38)
	ListStmt -> Stmt ListStmt                          (39)
	Type -> 'int'                                      (40)
	Type -> 'string'                                   (41)
	Type -> 'boolean'                                  (42)
	Type -> 'void'                                     (43)
	Type -> Type '[]'                                  (44)
	Type -> Ident                                      (45)
	ListType ->                                        (46)
	ListType -> Type                                   (47)
	ListType -> Type ',' ListType                      (48)
	Expr8 -> Ident                                     (49)
	Expr8 -> Ident '(' ListExpr ')'                    (50)
	Expr8 -> Expr8 '[' Expr ']'                        (51)
	Expr8 -> '(' Expr ')'                              (52)
	Expr7 -> Expr7 '.' Expr8                           (53)
	Expr7 -> Expr8                                     (54)
	Expr6 -> Integer                                   (55)
	Expr6 -> 'true'                                    (56)
	Expr6 -> 'false'                                   (57)
	Expr6 -> 'null'                                    (58)
	Expr6 -> String                                    (59)
	Expr6 -> '(' Expr ')' Expr6                        (60)
	Expr6 -> 'new' Type '[' Expr ']'                   (61)
	Expr6 -> 'new' Ident                               (62)
	Expr6 -> Expr7                                     (63)
	Expr5 -> '-' Expr6                                 (64)
	Expr5 -> '!' Expr6                                 (65)
	Expr5 -> Expr6                                     (66)
	Expr4 -> Expr4 MulOp Expr5                         (67)
	Expr4 -> Expr5                                     (68)
	Expr3 -> Expr3 AddOp Expr4                         (69)
	Expr3 -> Expr4                                     (70)
	Expr2 -> Expr2 RelOp Expr3                         (71)
	Expr2 -> Expr3                                     (72)
	Expr1 -> Expr2 '&&' Expr1                          (73)
	Expr1 -> Expr2                                     (74)
	Expr -> Expr1 '||' Expr                            (75)
	Expr -> Expr1                                      (76)
	ListExpr ->                                        (77)
	ListExpr -> Expr                                   (78)
	ListExpr -> Expr ',' ListExpr                      (79)
	AddOp -> '+'                                       (80)
	AddOp -> '-'                                       (81)
	MulOp -> '*'                                       (82)
	MulOp -> '/'                                       (83)
	MulOp -> '%'                                       (84)
	RelOp -> '<'                                       (85)
	RelOp -> '<='                                      (86)
	RelOp -> '>'                                       (87)
	RelOp -> '>='                                      (88)
	RelOp -> '=='                                      (89)
	RelOp -> '!='                                      (90)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'--'           { PT _ (TS _ 12) }
	'.'            { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	':'            { PT _ (TS _ 15) }
	';'            { PT _ (TS _ 16) }
	'<'            { PT _ (TS _ 17) }
	'<='           { PT _ (TS _ 18) }
	'='            { PT _ (TS _ 19) }
	'=='           { PT _ (TS _ 20) }
	'>'            { PT _ (TS _ 21) }
	'>='           { PT _ (TS _ 22) }
	'['            { PT _ (TS _ 23) }
	'[]'           { PT _ (TS _ 24) }
	']'            { PT _ (TS _ 25) }
	'boolean'      { PT _ (TS _ 26) }
	'class'        { PT _ (TS _ 27) }
	'else'         { PT _ (TS _ 28) }
	'extends'      { PT _ (TS _ 29) }
	'false'        { PT _ (TS _ 30) }
	'for'          { PT _ (TS _ 31) }
	'if'           { PT _ (TS _ 32) }
	'int'          { PT _ (TS _ 33) }
	'new'          { PT _ (TS _ 34) }
	'null'         { PT _ (TS _ 35) }
	'return'       { PT _ (TS _ 36) }
	'string'       { PT _ (TS _ 37) }
	'true'         { PT _ (TS _ 38) }
	'void'         { PT _ (TS _ 39) }
	'while'        { PT _ (TS _ 40) }
	'{'            { PT _ (TS _ 41) }
	'||'           { PT _ (TS _ 42) }
	'}'            { PT _ (TS _ 43) }
	L_Ident        { PT _ (TV _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	Def             rules 5, 6
	ListDef         rules 7, 8
	Arg             rule  9
	ListArg         rules 10, 11, 12
	Extend          rules 13, 14
	Feature         rules 15, 16, 17
	ListFeature     rules 18, 19
	Item            rules 20, 21
	ListItem        rules 22, 23
	Block           rule  24
	Stmt            rules 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37
	ListStmt        rules 38, 39
	Type            rules 40, 41, 42, 43, 44, 45
	ListType        rules 46, 47, 48
	Expr8           rules 49, 50, 51, 52
	Expr7           rules 53, 54
	Expr6           rules 55, 56, 57, 58, 59, 60, 61, 62, 63
	Expr5           rules 64, 65, 66
	Expr4           rules 67, 68
	Expr3           rules 69, 70
	Expr2           rules 71, 72
	Expr1           rules 73, 74
	Expr            rules 75, 76
	ListExpr        rules 77, 78, 79
	AddOp           rules 80, 81
	MulOp           rules 82, 83, 84
	RelOp           rules 85, 86, 87, 88, 89, 90

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'boolean'      shift, and enter state 8
	'class'        shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	Program        goto state 4
	Def            goto state 5
	ListDef        goto state 6
	Type           goto state 7

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'.'            reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	'[]'           reduce using rule 1
	']'            reduce using rule 1
	'extends'      reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1
	L_Ident        reduce using rule 1


State 3

	Type -> Ident .                                     (rule 45)

	'[]'           reduce using rule 45
	L_Ident        reduce using rule 45


State 4

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 5

	ListDef -> Def .                                    (rule 7)
	ListDef -> Def . ListDef                            (rule 8)

	'boolean'      shift, and enter state 8
	'class'        shift, and enter state 9
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	L_Ident        shift, and enter state 2
	%eof           reduce using rule 7

	Ident          goto state 3
	Def            goto state 5
	ListDef        goto state 16
	Type           goto state 7

State 6

	Program -> ListDef .                                (rule 4)

	%eof           reduce using rule 4


State 7

	Def -> Type . Ident '(' ListArg ')' Block           (rule 5)
	Type -> Type . '[]'                                 (rule 44)

	'[]'           shift, and enter state 15
	L_Ident        shift, and enter state 2

	Ident          goto state 14

State 8

	Type -> 'boolean' .                                 (rule 42)

	'['            reduce using rule 42
	'[]'           reduce using rule 42
	L_Ident        reduce using rule 42


State 9

	Def -> 'class' . Ident Extend '{' ListFeature '}'    (rule 6)

	L_Ident        shift, and enter state 2

	Ident          goto state 13

State 10

	Type -> 'int' .                                     (rule 40)

	'['            reduce using rule 40
	'[]'           reduce using rule 40
	L_Ident        reduce using rule 40


State 11

	Type -> 'string' .                                  (rule 41)

	'['            reduce using rule 41
	'[]'           reduce using rule 41
	L_Ident        reduce using rule 41


State 12

	Type -> 'void' .                                    (rule 43)

	'['            reduce using rule 43
	'[]'           reduce using rule 43
	L_Ident        reduce using rule 43


State 13

	Def -> 'class' Ident . Extend '{' ListFeature '}'    (rule 6)

	'extends'      shift, and enter state 19
	'{'            reduce using rule 13

	Extend         goto state 18

State 14

	Def -> Type Ident . '(' ListArg ')' Block           (rule 5)

	'('            shift, and enter state 17


State 15

	Type -> Type '[]' .                                 (rule 44)

	'['            reduce using rule 44
	'[]'           reduce using rule 44
	L_Ident        reduce using rule 44


State 16

	ListDef -> Def ListDef .                            (rule 8)

	%eof           reduce using rule 8


State 17

	Def -> Type Ident '(' . ListArg ')' Block           (rule 5)

	')'            reduce using rule 10
	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	Arg            goto state 22
	ListArg        goto state 23
	Type           goto state 24

State 18

	Def -> 'class' Ident Extend . '{' ListFeature '}'    (rule 6)

	'{'            shift, and enter state 21


State 19

	Extend -> 'extends' . Ident                         (rule 14)

	L_Ident        shift, and enter state 2

	Ident          goto state 20

State 20

	Extend -> 'extends' Ident .                         (rule 14)

	'{'            reduce using rule 14


State 21

	Def -> 'class' Ident Extend '{' . ListFeature '}'    (rule 6)

	';'            shift, and enter state 31
	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	'}'            reduce using rule 18
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	Feature        goto state 28
	ListFeature    goto state 29
	Type           goto state 30

State 22

	ListArg -> Arg .                                    (rule 11)
	ListArg -> Arg . ',' ListArg                        (rule 12)

	')'            reduce using rule 11
	','            shift, and enter state 27


State 23

	Def -> Type Ident '(' ListArg . ')' Block           (rule 5)

	')'            shift, and enter state 26


State 24

	Arg -> Type . Ident                                 (rule 9)
	Type -> Type . '[]'                                 (rule 44)

	'[]'           shift, and enter state 15
	L_Ident        shift, and enter state 2

	Ident          goto state 25

State 25

	Arg -> Type Ident .                                 (rule 9)

	')'            reduce using rule 9
	','            reduce using rule 9


State 26

	Def -> Type Ident '(' ListArg ')' . Block           (rule 5)

	'{'            shift, and enter state 39

	Block          goto state 38

State 27

	ListArg -> Arg ',' . ListArg                        (rule 12)

	')'            reduce using rule 10
	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	Arg            goto state 22
	ListArg        goto state 37
	Type           goto state 24

State 28

	ListFeature -> Feature . ListFeature                (rule 19)

	';'            shift, and enter state 31
	'boolean'      shift, and enter state 8
	'int'          shift, and enter state 10
	'string'       shift, and enter state 11
	'void'         shift, and enter state 12
	'}'            reduce using rule 18
	L_Ident        shift, and enter state 2

	Ident          goto state 3
	Feature        goto state 28
	ListFeature    goto state 36
	Type           goto state 30

State 29

	Def -> 'class' Ident Extend '{' ListFeature . '}'    (rule 6)

	'}'            shift, and enter state 35


State 30

	Feature -> Type . ListItem ';'                      (rule 15)
	Feature -> Type . Ident '(' ListArg ')' Block       (rule 16)
	Type -> Type . '[]'                                 (rule 44)

	'[]'           shift, and enter state 15
	L_Ident        shift, and enter state 2

	Ident          goto state 32
	Item           goto state 33
	ListItem       goto state 34

State 31

	Feature -> ';' .                                    (rule 17)

	';'            reduce using rule 17
	'boolean'      reduce using rule 17
	'int'          reduce using rule 17
	'string'       reduce using rule 17
	'void'         reduce using rule 17
	'}'            reduce using rule 17
	L_Ident        reduce using rule 17


State 32

	Feature -> Type Ident . '(' ListArg ')' Block       (rule 16)
	Item -> Ident .                                     (rule 20)
	Item -> Ident . '=' Expr                            (rule 21)

	'('            shift, and enter state 72
	','            reduce using rule 20
	';'            reduce using rule 20
	'='            shift, and enter state 73


State 33

	ListItem -> Item .                                  (rule 22)
	ListItem -> Item . ',' ListItem                     (rule 23)

	','            shift, and enter state 71
	';'            reduce using rule 22


State 34

	Feature -> Type ListItem . ';'                      (rule 15)

	';'            shift, and enter state 70


State 35

	Def -> 'class' Ident Extend '{' ListFeature '}' .    (rule 6)

	'boolean'      reduce using rule 6
	'class'        reduce using rule 6
	'int'          reduce using rule 6
	'string'       reduce using rule 6
	'void'         reduce using rule 6
	L_Ident        reduce using rule 6
	%eof           reduce using rule 6


State 36
